<resources>
	<string name="navigation_text">开启山水之旅</string>
    <string name="app_name">珞珈山水</string>
    <string name="login_title">武汉大学珞珈山水BBS</string>
    <string name="login_remember_user">记住密码</string>
    <string name="login_user_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="anonymous">匿名</string>
    <string name="activity_board">版块列表</string>
    <string name="activity_mine">我的山水</string>
    <string name="activity_message">MESSAGE</string>
    <string name="activity_more">更多</string>
    <string name="top_ten_text">十大热点</string>
    <string name="playbill_text">校园海报</string>
    <string name="recommend_text">推荐文章</string>
    <string name="bulletin_title">帖子详情</string>
    <string name="bulletin_reply">回复</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="board_child_number">编号：</string>
    <string name="board_child_englishname">名称：</string>
    <string name="bulletin_reply_title_hint">标题在25个中文字符以内</string>
    <string name="bulletin_reply_content">帖子内容\n\n\n\n</string>
    <string name="bulletin_reply_attachment">附件</string>
    <string name="bulletin_reply_signature">签名档</string>
    <string name="bulletin_reply_publish">发表</string>
    <string name="mine_person_text">个人资料</string>
    <string name="mine_mail_text">站内信件</string>
    <string name="mine_board_text">收藏版面</string>
    <string name="mine_friend_text">在线好友</string>
    <string name="person_post_text">论坛职务：</string>
    <string name="person_sect_text">所属门派：</string>
    <string name="person_life_text">生命力 ：</string>
    <string name="person_level_text">经验等级：</string>
    <string name="person_experience_text">经验值 ：</string>
    <string name="person_article_number_text">帖子总数：</string>
    <string name="person_login_number_text">登录次数：</string>
    <string name="person_login_time_text">上次登录：</string>
    <string name="person_user_mode_text">用户状态：</string>
    <string name="person_sign_text">个性签名：</string>
    <string name="collect_board_new_article_text">新帖：</string>
    <string name="online_friend_message_text">消 息</string>
    <string name="online_friend_mail_text">邮 件</string>
    <string name="recommend_author_text">作者：</string>
    <string name="recommend_recommend_people_text">推荐者：</string>
    <string name="recommend_board_text">版块：</string>
    <string name="recommend_time_text">时间：</string>
    <string name="mail_send_text">发送信件</string>
    <string name="mail_send_submit_text">发 送</string>
    <string name="mail_content_title">信件内容</string>
    <string name="mail_content_text">信件内容\n\n\n\n</string>
    <string name="new_mail">写 信</string>
    <string name="mail_reply">回 信</string>
    <string name="mail_box_empty_text">邮箱为空</string>
    <string name="bbs_exception_text">论坛错误:\t\t\t\t\t\n\t\t1.无登录权限\n\t\t2.原文不存在</string>
    <string name="about_app_description">本软件为珞珈山水BBS的Android手机客户端，集看帖，发帖，回帖，信件等基本功能于一身，为你打造完美的移动山水体验！</string>
    <string name="about_app_feedback">客户端吐槽请移步：\n珞珈山水版面：山水客户端/BBSApp\n\n反馈开发者请联系：\nBBS ID：wwang double0291 ljp</string>
    <string name="about_app_copyright">Copyright © 2013 BBS 珞珈山水站.\n武汉大学.\nAll rights reserved.</string>

</resources>