 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/bulletin_reply_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="20dip"
        android:text="@string/bulletin_reply_title" />

    <!-- 标题编辑框 -->

    <EditText
        android:id="@+id/bulletin_reply_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:layout_marginTop="20dip"
        android:height="40dip"
        android:hint="@string/bulletin_reply_title"
        android:width="240dip" />

    <TextView
        android:id="@+id/bulletin_reply_content_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="70dip"
        android:text="@string/bulletin_reply_content" />

    <!-- 正文编辑框 -->

    <EditText
        android:id="@+id/bulletin_reply_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:layout_marginTop="70dip"
        android:gravity="top"
        android:height="200dip"
        android:hint="@string/bulletin_reply_content"
        android:width="240dip" />

    <TextView
        android:id="@+id/bulletin_reply_attachment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="270dip"
        android:text="@string/bulletin_reply_attachment" />

    <!-- 附件编辑框 -->

    <EditText
        android:id="@+id/bulletin_reply_attachment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:layout_marginTop="270dip"
        android:height="30dip"
        android:hint="@string/bulletin_reply_attachment"
        android:width="80dip" />

    <TextView
        android:id="@+id/bulletin_reply_signature_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="320dip"
        android:text="@string/bulletin_reply_signature" />

    <EditText
        android:id="@+id/bulletin_reply_signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:layout_marginTop="320dip"
        android:height="30dip"
        android:hint="@string/bulletin_reply_signature"
        android:width="80dip" />

    <Button
        android:id="@+id/bulletin_reply_publish_button"
        android:layout_width="100dip"
        android:layout_height="80dip"
        android:layout_marginLeft="200dip"
        android:layout_marginTop="370dip"
        android:text="@string/bulletin_reply_publish" />

</RelativeLayout>