<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="#FFFAFAFA" android:minHeight="60dip">

	<RelativeLayout android:id="@+id/recommend_relativeLayout"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="#fffafaf7">
		<ImageView android:id="@+id/recommend_imageView"
			android:layout_width="20dip" android:layout_height="20dip"
			android:layout_centerVertical="true" android:scaleType="centerInside"
			android:src="@drawable/recommend_rectangle"
			android:layout_marginLeft="5dip" />
		<TextView android:id="@+id/recommend_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:minHeight="50dip" android:gravity="center_vertical" android:text="做了一个汇总大家提案的网站~"
			android:textSize="20sp" android:textStyle="bold" android:textColor="#ff000000"
			android:layout_toRightOf="@id/recommend_imageView"
			android:layout_marginLeft="5dip" android:layout_marginRight="15dip" />
	</RelativeLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_below="@id/recommend_relativeLayout"
		android:gravity="center_vertical" android:background="#ffcae5e8">
		<TableLayout android:id="@+id/recommend_tableLayout"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_centerVertical="true"
			android:stretchColumns="0,1,2,3" android:layout_weight="1">
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:layout_gravity="center_vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/recommend_author_text"
					android:textColor="#ff808080" android:layout_column="0" />
				<TextView android:id="@+id/recommend_author"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="scoripio" android:textColor="#ff808080"
					android:layout_column="1" />
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/recommend_recommend_people_text"
					android:textColor="#ff808080" android:layout_column="2" />
				<TextView android:id="@+id/recommend_recommend_people"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="siximu" android:textColor="#ff808080"
					android:layout_column="3" />
			</TableRow>
			<TableRow android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal"
				android:layout_gravity="center_vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/recommend_board_text"
					android:textColor="#ff808080" android:layout_column="0" />
				<TextView android:id="@+id/recommend_board"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="secondhand" android:textColor="#ff808080"
					android:layout_column="1" />
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/recommend_time_text"
					android:textColor="#ff808080" android:layout_column="2" />
				<TextView android:id="@+id/recommend_time"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="2012-11-08" android:textColor="#ff808080"
					android:layout_column="3" />
			</TableRow>
		</TableLayout>

		<LinearLayout android:layout_width="30dip"
			android:layout_height="30dip" android:layout_centerVertical="true"
			android:layout_marginLeft="5dip" android:layout_marginRight="15dip"
			android:gravity="center" android:background="@drawable/recommend_star">
			<TextView android:id="@+id/recommend_reply_number"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="1" android:textSize="12sp" android:textStyle="bold"
				android:textColor="#ffffffff" android:gravity="center" />
		</LinearLayout>

	</LinearLayout>

</RelativeLayout>
