<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/background_left_bottom_flower" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/background_right_top_flower" />

    <RelativeLayout
        android:id="@+id/about_title_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darker_titlebar_bg" >

        <ImageView
            android:id="@+id/about_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="关于"
            android:textColor="#FF7B7B7B"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about_title_linearLayout" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/about_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_title_linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/app_logo" />

            <TextView
                android:id="@+id/about_logo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="珞珈山水Android版"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/about_edition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_logo_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="1.0 版"
                android:textColor="#8e8e8e"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/about_app_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_edition"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/more_list_above_nor"
                android:orientation="horizontal" >

                <TextView
                    style="@style/more_list_font"
                    android:text="@string/about_app_description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_app_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/about_app_description"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/more_list_below_nor"
                android:orientation="horizontal" >

                <TextView
                    style="@style/more_list_font"
                    android:text="@string/about_app_feedback" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/about_app_feedback"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/about_app_copyright" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>